Fix CSS layout issues and improve header styling for better consistency

--- a/style.css
+++ b/style.css
@@ -8,11 +8,9 @@ body {
 
 
 .header {
-    display: flex;
-    justify-self: center;
+    display: grid justify-self: center;
     grid-area: header;
-    padding: 5px 0 30px 0;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
 
 }
 
@@ -20,7 +18,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 1f 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
     grid-template-areas:
         "header header"
@@ -36,9 +34,10 @@ body {
 }
 
 #Kalenderblatt table {
-    border-spacing: 0px;
+    border-spacing: 20px;
     border-collapse: collapse;
     font-size: 18px;
+
 
 }
 
@@ -118,11 +117,5 @@ td:nth-child(1) {
 }
 
 h4 {
-    margin-top: 10rem;
+    margin-top: 4rem;
 }
-
-* {}
-
-border: red solid 1px;
-margin: 0;
-...........Flexbox zu markieren um zu bearbeiten
